kotlin-ide/idea/testData/checker/codeFragments/classHeader.kt.fragment
"" + <error descr="[UNRESOLVED_REFERENCE] Unresolved reference: aaabbbccc">aaabbbccc</error> + aabbcc + this.toString()